<resources>
    <string name="app_name">TDD Class Management App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="students">Students</string>
    <string name="teachers">Teachers</string>
    <string name="class_rooms">Class Rooms</string>
    <string name="roll_no_placeholder">Roll No: ---</string>
    <string name="name_placeholder">Name: ---</string>
    <string name="roll_no">Roll No.</string>
    <string name="name">Name</string>
    <string name="create">Create</string>
    <string name="update">Update</string>
    <string name="teacher">Teacher</string>
    <string name="class_room_name">Class Room Name</string>
</resources>